refactor main sections and experiment

--- a/macros.tex
+++ b/macros.tex
@@ -44,6 +44,7 @@
 
 %Flow Variants
 \newcommand{\FlowVariant}[4]{(#1\text{F},#2\text{C},#3\text{M},#4\text{FM})}
+\newcommand{\Constant}[1]{\textsc{Constant#1}}
 
 %Partitioner Variants
 \newcommand{\KaHyPar}[1]{KaHyPar-#1}
