--- a/master_thesis/experiments/flow_alpha/flow_alpha_table1.tex
+++ b/master_thesis/experiments/flow_alpha/flow_alpha_table1.tex
@@ -1,7 +1,7 @@
-$1$ & $-20.02$ & $12.44$ & $-15.48$ & $12.94$ & $-19.69$ & $12.63$ \\ 
-$2$ & $-14.61$ & $15.16$ & $-10.5$ & $16.07$ & $-14.17$ & $15.77$ \\ 
-$4$ & $-8.99$ & $19.92$ & $-5.98$ & $21.22$ & $-8.22$ & $21.2$ \\ 
-$8$ & $-4.96$ & $28.71$ & $-3.22$ & $30.73$ & $-3.37$ & $31.25$ \\ 
-$16$ & $-2.58$ & $47.35$ & $-1.52$ & $50.89$ & $-0.34$ & $52.19$ \\ 
+$1$ & $-20.22$ & $12.26$ & $-15.63$ & $12.76$ & $-19.88$ & $12.44$ \\ 
+$2$ & $-14.78$ & $14.9$ & $-10.61$ & $15.8$ & $-14.33$ & $15.47$ \\ 
+$4$ & $-9.11$ & $19.51$ & $-6.06$ & $20.79$ & $-8.34$ & $20.74$ \\ 
+$8$ & $-5.05$ & $28.02$ & $-3.28$ & $30$ & $-3.45$ & $30.49$ \\ 
+$16$ & $-2.65$ & $46.1$ & $-1.57$ & $49.58$ & $-0.39$ & $50.82$ \\ 
 \cmidrule{1-7}% 
-Ref. & \multicolumn{2}{c||}{\FlowVariant{-}{-}{-}{+}} & $6373.88$ & $13.73$ \\ 
+Ref. & \multicolumn{2}{c||}{\FlowVariant{-}{-}{-}{+}} & $6311.6$ & $13.56$ & \multicolumn{2}{c|}{} \\ 
