--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -336,7 +336,7 @@ I could continue every morning with the same energy and passion as the day befor
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Optimized Approach on Modelling Flows in Hypergraphs}
+\section{Optimized Approach on Modeling Flows in Hypergraphs}
 \label{sec:opt_flow_network}
 \input{sections/model_flow}
 
